# backdoorCppCrossPlateform

./: .cproject  .gitignore  .project  CMakeLists.txt  Makefile  Makefile.linux  Makefile.old  Makefile.windows  README.md  SocketClientProvider.cpp  SocketClientProvider.h  SocketProvider.cpp  SocketServerProvider.h  client.cpp  main.cpp
core/cli/: Interface.h
core/socket/: SocketClientProvider.cpp  SocketClientProvider.h  SocketProvider.cpp  SocketProvider.h  SocketServerProvider.cpp  SocketServerProvider.h
core/utils/: Array.cpp
sample/: query.http.raw
src/: main.cpp
src/core/cli/: Interface.cpp  Interface.h
src/core/common/: Constant.h
src/core/socket/: SocketClientProvider.cpp  SocketClientProvider.h  SocketProvider.cpp  SocketProvider.h  SocketServerProvider.cpp  SocketServerProvider.h  SocketWrapper.cpp  SocketWrapper.h
src/core/utils/: Array.h  Network.cpp  Network.h
